# openGL

./: .gitignore  CMakeLists.txt
include/: Cube.h  Triangle.h
res/shaders/: shader.fs  shader.vs
src/: CMakeLists.txt  Cube.cpp  Triangle.cpp  main.cpp
src/utils/: assimpParser.h  shaderLoader.h
